--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is REST API application built with NodeJS and has unit tests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -25,5 +25,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "joi": "^17.7.0"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1"
   }
 }
