--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "joi": "^17.7.0"
   },
   "devDependencies": {
-    "jest": "^29.3.1"
+    "cross-env": "^7.0.3",
+    "jest": "^29.3.1",
+    "supertest": "^6.3.1"
   }
 }
